--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,6 +5,7 @@
     <div class="details content">
         <h2 id="title"><%= blog.title %> </h2>
         <h3  id="snippet"><%= blog.snippet %> </h3>
+        <img src="<%= blog.image %>" alt="" class="image">
         <p id="body"><%= blog.body %></p>
         
         <div id="update">
