--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Noto Serif', serif;
 }
     
-p, h1, h2, h3, a, ul {
+p, h1, h2, h3, a, ul, img {
     margin: 0;
     padding: 0;
     text-decoration: none;
@@ -110,6 +110,11 @@ textarea {
     width: 50px;
     height: 50px;
     border: 1px solid black;
+}
+
+.image {
+    width: 200px;
+    height: 200px;
 }
 
 .delete, .back {
