--- a/views/update.ejs
+++ b/views/update.ejs
@@ -6,13 +6,16 @@
         <form action="/blogs/<%= blog._id%>?_method=PUT" method="post">
             
             <label for="title">Blog title:</label>
-            <input type="text" placeholder="Blog Title" name="title" id="title" required>
+            <input type="text" placeholder="Blog Title" name="title" id="title">
+
+            <label for="title">Blog Image:</label>
+            <input type="text" name="image" id="title" placeholder="Blog Image">
 
             <label for="snippet">Blog Snippet:</label>
-            <input type="text" name="snippet" id="snippet" placeholder="Blog Snippet" required>
+            <input type="text" name="snippet" id="snippet" placeholder="Blog Snippet">
 
             <label for="body">Blog Body:</label>
-            <textarea name="body" id="body" placeholder="Blog body" required></textarea>
+            <textarea name="body" id="body" placeholder="Blog body"></textarea>
 
             <button>Submit</button>
         </form>   
